iCW-RK: Fixed Event related issues.

--- a/src/app/pages/events/containers/event-detail-page/event-detail-page.component-back.html
+++ b/src/app/pages/events/containers/event-detail-page/event-detail-page.component-back.html
@@ -35,8 +35,8 @@
         <div class="row">
           <div class="col-lg-6 col-md-12">
             <div class="left-content">
-              <h1 class="pb-5 mb-5">{{selectedEvent?.title}}</h1>
-              <!-- a href="#"><span><i class="fa fa-play" aria-hidden="true"></i></span> Watch Now</a -->
+              <h1 class="pb-5 mb-5">The Importance of Oral Health for the Pediatric Patient.</h1>
+              <a href="#"><span><i class="fa fa-play" aria-hidden="true"></i></span> Watch Now</a>
             </div>
           </div>
           <div class="col-lg-6 col-md-12">
@@ -45,23 +45,23 @@
               <ul>
                 <li>
                   <span>Speaker</span>
-                  <span class="text-black">{{selectedEvent?.author}}</span>
+                  <span class="text-black">Dr Greg Psaltis</span>
                 </li>
                 <li>
-                  <span>{{selectedEvent?.time}}</span>
-                  <span class="text-black">{{selectedEvent?.date|date}}</span>
+                  <span>9pm EST</span>
+                  <span class="text-black">Saturday February 23, 2019</span>
                 </li>
                 <li>
                   <span>Starting</span>
-                  <span class="text-black">{{selectedEvent?.eventType}}</span>
+                  <span class="text-black">In-Person Event</span>
                 </li>
                 <li>
                   <span>Attending</span>
-                  <span class="text-black">{{selectedEvent?.attendees}}</span>
+                  <span class="text-black">150</span>
                 </li>
                 <li>
                   <span>Price</span>
-                  <span class="text-black">{{selectedEvent?.price}}</span>
+                  <span class="text-black">Free</span>
                 </li>
                 <li>
                   <a href="#" class="btn btn-block btn-primary">Register</a>
@@ -76,7 +76,14 @@
   <div class="event-desc-wrap mt-5">
     <div class="container">
       <h4 class="mb-4">Description</h4>
-      <p>{{selectedEvent?.content}}</p>
+      <p>This webinar will discuss how primary dental care plays a vital role in children’s dental health as they grow
+        and
+        will cover ways to instill good oral hygiene habits in these children. Developing good oral hygiene habits at a
+        young
+        age is the first step in securing a safe future from many common dental issues such as plaque, gum disease, and
+        cavities. If these habits are not enforced at a young age, the same poor hygiene habits could negatively impact
+        their
+        oral health as an adult and impact their daily lives as well. </p>
     </div>
   </div>
 </div>
