--- a/src/app/pages/home/components/events/events.component.html
+++ b/src/app/pages/home/components/events/events.component.html
@@ -1,8 +1,8 @@
 <div class="events">
   <h2 class="section-title">Events <a [routerLink]="['./events']">See all</a></h2>
-  <div class="event-block" [routerLink]="['./events']">
+  <div class="event-block" [routerLink]="['./events/10']">
     <div class="event-date">
-      <h3>Nov</h3>
+      <h3>June</h3>
       <h4>15</h4>
     </div>
     <div class="event-thumbnail">
@@ -18,9 +18,10 @@
       </div>
     </div>
   </div>
-  <div class="event-block" [routerLink]="['./events']">
+
+  <div class="event-block" [routerLink]="['./events/11']">
     <div class="event-date">
-      <h3>Dec</h3>
+      <h3>July</h3>
       <h4>07</h4>
     </div>
     <div class="event-thumbnail">
@@ -36,9 +37,9 @@
       </div>
     </div>
   </div>
-  <div class="event-block" [routerLink]="['./events']">
+  <div class="event-block" [routerLink]="['./events/12']">
     <div class="event-date">
-      <h3>Jan</h3>
+      <h3>July</h3>
       <h4>26</h4>
     </div>
     <div class="event-thumbnail">
@@ -54,9 +55,9 @@
       </div>
     </div>
   </div>
-  <div class="event-block" [routerLink]="['./events']">
+  <div class="event-block" [routerLink]="['./events/1']">
     <div class="event-date">
-      <h3>Feb</h3>
+      <h3>Aug</h3>
       <h4>10</h4>
     </div>
     <div class="event-thumbnail">
@@ -72,9 +73,9 @@
       </div>
     </div>
   </div>
-  <div class="event-block" [routerLink]="['./events']">
+  <div class="event-block" [routerLink]="['./events/2']">
     <div class="event-date">
-      <h3>Mar</h3>
+      <h3>Aug</h3>
       <h4>22</h4>
     </div>
     <div class="event-thumbnail">
@@ -90,10 +91,10 @@
       </div>
     </div>
   </div>
-  <div class="event-block" [routerLink]="['./events']">
+  <div class="event-block" [routerLink]="['./events/3']">
     <div class="event-date">
-      <h3>Apr</h3>
-      <h4>11</h4>
+      <h3>Sept</h3>
+      <h4>10</h4>
     </div>
     <div class="event-thumbnail">
       <img src="./assets/images/event-6.png" class="img-fluid" alt="">
