--- a/src/app/pages/home/components/podcasts/podcasts.component.html
+++ b/src/app/pages/home/components/podcasts/podcasts.component.html
@@ -39,7 +39,7 @@
             <div class="podcast-block-thumbnail">
               <img src="./assets/images/featured-podcast.png" class="img-fluid" alt="Feautred Thumbnail Large">
               <div class="podcasts-block-caption">
-                <h4>Awesome Topic Info | Christina Calleros, RDH, MS</h4>
+                <h4>Top Recommended Podcasts of DSODentist</h4>
               </div>
             </div>
           </div>
