Fix for Events "Learn More" link and other minor changes Bootstrap datepciker import issue Minor Typo on the profile settings page

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,7 +12,7 @@
 @import '~@ngx-share/button/styles/themes/material/material-dark-theme';
 @import '~@ngx-share/button/styles/themes/circles/circles-dark-theme';
 @import '~@ngx-share/button/styles/themes/modern/modern-light-theme';
-@import 'node_modules/ngx-bootstrap/datepicker/bs-datepicker.css';
+// @import 'node_modules/ngx-bootstrap/datepicker/bs-datepicker.css';
 
 * {
   margin: 0;
