--- a/src/app/shared/components/profile-settings/profile-settings.component.html
+++ b/src/app/shared/components/profile-settings/profile-settings.component.html
@@ -6,7 +6,7 @@
     <div class="item-content-wrapper">
       <div class="item-content">
         <span class="title no-content">
-          Set notific actions and alerts.
+          Set notifications and alerts.
         </span>
       </div>
     </div>
