Fixes for Demo - Changes summay below 1. Removed DSO Practice menu 2. Minor typo corrections in Profile settings 3. Removed extra characters on events page title 4. Updated event dates to make it current 5. Added timer maps for the new podcasts 6. CSS changes to display podcast timer in the podcast detail page 7. Added a cropped image for the events slider

--- a/src/app/layout/profile/profile-view/profile-view.component.html
+++ b/src/app/layout/profile/profile-view/profile-view.component.html
@@ -79,7 +79,7 @@
               <span class="title">Mobile Number</span>
               <span class="content" *ngIf="userProfile?.phone; else noPhoneNumber">{{userProfile?.phone}}</span>
               <ng-template #noPhoneNumber>
-                <span class="content">No PhoneNumber added yet.</span>
+                <span class="content">No phone number added yet.</span>
               </ng-template>
             </div>
           </div>
