Fix for  Share component display in Events page and few minor items

--- a/src/app/pages/events/components/create-event/create-event.component.html
+++ b/src/app/pages/events/components/create-event/create-event.component.html
@@ -27,10 +27,9 @@
           <div class="form-group">
             <label for="" class="form-control-label">Theme</label>
             <select name="" id="" class="form-control">
-              <option value="">Theme1</option>
-              <option value="">Theme1</option>
-              <option value="">Theme1</option>
-              <option value="">Theme1</option>
+              <option value="">Theme Light</option>
+              <option value="">Theme Dark</option>
+              <option value="">Theme Blue</option>
             </select>
           </div>
         </div>
