--- a/src/app/pages/home/components/our-sponsors/our-sponsors.component.html
+++ b/src/app/pages/home/components/our-sponsors/our-sponsors.component.html
@@ -6,15 +6,15 @@
         <div class="our-sponsors">
           <div class="our-sponsors-header">
             <h4 *ngIf="topic.sponsorName==='ALN'">
-              <img src="assets/images/align-logo.png" alt="">
+              <a [routerLink]="['/sponsors/ALN']"><img src="assets/images/align-logo.png" alt=""></a>
               Sponsored content from Align Technology, Inc.
             </h4>
             <h4 *ngIf="topic.sponsorName==='NBL'">
-              <img src="assets/images/nb-logo.png" alt="">
+              <a [routerLink]="['/sponsors/NBL']"><img src="assets/images/nb-logo.png" alt=""></a>
               Sponsored content from Nobel Biocare, N.A.
             </h4>
             <h4 *ngIf="topic.sponsorName==='GSK'">
-              <img src="assets/images/gsk-icon-sm.png" alt="">
+              <a [routerLink]="['/sponsors/GSK']"><img src="assets/images/gsk-icon-sm.png" alt=""></a>
               Sponsored content from GlaxoSmithKline
             </h4>
           </div>
@@ -24,7 +24,7 @@
       <div class="col-6">
         <section class="sponsors-ortho">
           <div>
-            <dsod-media-content title="implant Dentisty" [placeholderImageSrc]="topic.featuredMedia.code.originalUrl"
+            <dsod-media-content [placeholderImageSrc]="topic.featuredMedia.code.originalUrl"
               [title]="topic.categoryName" [topic]="topic">
             </dsod-media-content>
           </div>
