--- a/src/app/shared/components/trending/trending.component.html
+++ b/src/app/shared/components/trending/trending.component.html
@@ -8,7 +8,7 @@
         </div>
       </div>
       <div class="col-lg-12 col-md-5">
-        <a [routerLink]="['/sponsors/GSK']" *ngIf="trendingTopics.length">
+        <a *ngIf="trendingTopics.length">
           <dsod-sponsored-ad [sponsorName]="sponsorName"></dsod-sponsored-ad>
         </a>
       </div>
