Reverting Share component change

--- a/src/app/pages/events/components/card/event-card.component.html
+++ b/src/app/pages/events/components/card/event-card.component.html
@@ -59,7 +59,7 @@
       </select>
     </div>
     <div class="register-btn-wrap">
-      <dsod-share [content]="content" [plain]="true"></dsod-share>
+      <button role="button" class="card-action"><i class="fa fa-ellipsis-v" aria-hidden="true"></i></button>
       <button role="button" class="register-btn" [ngClass]="{'register-enabled':enableEditing}">Register</button>
     </div>
   </div>
