Home page related items for the demo

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -23,7 +23,7 @@
         <dsod-events></dsod-events>
       </div>
       <div class="col-xl-7 col-lg-7 col-md-12">
-        <dsod-our-sponsors [sponsoredTopics]="sponsoredTopics$ | async"></dsod-our-sponsors>
+        <dsod-our-sponsors [featuredTopics]="featuredTopics$ | async" [sponsoredTopics]="sponsoredTopics$ | async"></dsod-our-sponsors>
       </div>
     </div>
   </div>
