--- a/src/app/pages/video/containers/video-page/video-page.component.html
+++ b/src/app/pages/video/containers/video-page/video-page.component.html
@@ -34,7 +34,7 @@
               </div>
             </div>
           </div>
-          <dsod-feartured-media [featuredMedia]="pageContent.featuredMedia" styleFor="header"></dsod-feartured-media>
+          <!-- <dsod-feartured-media [featuredMedia]="pageContent.featuredMedia" styleFor="header"></dsod-feartured-media> -->
           <dsod-video-content [content]="pageContent?.content"></dsod-video-content>
           <dsod-gallery [photos]="pageContent?.photos"></dsod-gallery>
           <dsod-references [references]="pageContent?.references"></dsod-references>
@@ -54,8 +54,10 @@
           <div class="row">
             <div class="col-lg-12 col-md-7">
               <div *ngFor="let topic of trendingTopics$ |async">
-                <dsod-topic [topic]="topic" [contentLength]=117 [showImage]="true" [showHeader]="true" styleFor="content-sm"
-                  [showRating]=true></dsod-topic>
+                <div *ngIf="topic.categoryName != 'Uncategorized'">
+                  <dsod-topic [topic]="topic" [contentLength]=117 [showImage]="true" [showHeader]="true" styleFor="content-sm"
+                    [showRating]=true></dsod-topic>
+                </div>
               </div>
             </div>
             <div class="col-lg-12 col-md-5">
