Fix for Back button issue on sponsors page banner on Learn More page

--- a/src/app/shared/components/large-carousel/carousal-item-lg/carousal-item-lg.component.html
+++ b/src/app/shared/components/large-carousel/carousal-item-lg/carousal-item-lg.component.html
@@ -7,7 +7,7 @@
     <div class="slide-content text-center">
       <h2>{{content.title}}</h2>
       <h3>{{content.description}}</h3>
-      <a class="learn-more-btn" [routerLink]="content.actionLink" (click)="onLearnMore()">{{content.actionName}}</a>
+      <a class="learn-more-btn" (click)="onLearnMore()">{{content.actionName}}</a>
     </div>
   </div>
 </div>
