--- a/src/app/shared/components/large-carousel/carousal-item-lg/carousal-item-lg.component.scss
+++ b/src/app/shared/components/large-carousel/carousal-item-lg/carousal-item-lg.component.scss
@@ -70,6 +70,7 @@
         font-family: $neue_hgd_Medium;
         background: $layout-blue;
         padding: 28px 76px;
+        cursor: pointer;
       }
     }
   }
