--- a/src/app/pages/visual-essay/containers/visual-essay/visual-essay.component.scss
+++ b/src/app/pages/visual-essay/containers/visual-essay/visual-essay.component.scss
@@ -1,12 +1,12 @@
 @import 'variables';
 
-.essay-container {
-  padding: 100px 0;
+.essay-content {
   p {
     display: block;
     font-size: 20px;
     line-height: 35px;
     margin-bottom: 25px;
+
     &:first-letter {
       float: left;
       font-size: 60px;
@@ -18,13 +18,48 @@
   }
   .carousel-image-container {
     margin-top: 20px;
-    width: 65%;
+    width: 50%;
     margin: auto;
     img {
       width: 100%;
     }
   }
-  .section-container {
-    padding: 30px 0;
+}
+.essay-container {
+  padding: 30px 0;
+  .essay-title {
+    color: #7D7C7C;
+    font-family: "helvetica";
+    font-weight: bold;
+    font-size: 22px;
+    margin-bottom: 15px;
+  }
+  .essay-item {
+    padding: 20px;
+    font-size: 18px;
+  }
+}
+
+.trending-videos {
+  border-left: 1px solid #ccc;
+  margin-left: -15px;
+  padding-left: 30px;
+
+  h2.section-title {
+    font-size: 30px;
+  }
+}
+
+@media only screen and (max-width:1440px){
+  .trending-videos {
+    h2.section-title {
+      font-size: 20px;
+    }
+  }
+}
+@media only screen and (max-width:1199px) {
+  .trending-videos {
+    padding-left: 15px;
+    margin: 0;
   }
 }
