DSOD "Comming Soon" Fixes

--- a/src/app/pages/development/components/development/development.component.html
+++ b/src/app/pages/development/components/development/development.component.html
@@ -1,9 +1,11 @@
-<div>
-  <div class="image-header-container"></div>
-</div>
-<div class="content-wrapper">
-  <div class="content-item-wrapper">
-    <div class="title">Coming Soon...</div>
-    <div class="content-item-body"></div>
-  </div>
-</div>
+<!--<div>-->
+  <!--<div class="image-header-container"></div>-->
+<!--</div>-->
+<!--<div class="content-wrapper">-->
+  <!--<div class="content-item-wrapper">-->
+    <!--<div class="title">Coming Soon...</div>-->
+    <!--<div class="content-item-body"></div>-->
+  <!--</div>-->
+<!--</div>-->
+
+<div class="d-flex justify-content-center align-items-center" style="height:100vh;font-size:50px;">Coming Soon...</div>
