--- a/src/app/pages/education/container/education-container.component.html
+++ b/src/app/pages/education/container/education-container.component.html
@@ -1,12 +1,12 @@
-<div>
-  <div class="image-header-container">
-    <div class="banner-overlay"></div>
-    <div class="banner-caption">
-      <h1 class="text-white">Lectures poolside</h1>
-      <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur voluptate a</p> -->
-    </div>
-  </div>
-</div>
+<!--<div>-->
+  <!--<div class="image-header-container">-->
+    <!--<div class="banner-overlay"></div>-->
+    <!--<div class="banner-caption">-->
+      <!--<h1 class="text-white">Lectures poolside</h1>-->
+      <!--&lt;!&ndash; <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur voluptate a</p> &ndash;&gt;-->
+    <!--</div>-->
+  <!--</div>-->
+<!--</div>-->
 <div class="content-wrapper">
   <router-outlet></router-outlet>
 </div>
