--- a/src/app/pages/career/components/career/career.component.html
+++ b/src/app/pages/career/components/career/career.component.html
@@ -1,18 +1,19 @@
-<div>
-  <div class="image-header-container">
-    <div class="banner-overlay"></div>
-    <div class="banner-caption">
-      <h1 class="text-white">Do what you do...</h1>
-      <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur voluptate a</p> -->
-    </div>
-  </div>
-</div>
-<div class="content-item-wrapper">
-  <div class="content-item" *ngFor="let image of careerImages">
-    <img class="img-category" src={{image.url}}>
-    <div class="category-content">
-      <span class="category-title">{{image.title}}</span>
-    </div>
-  </div>
-</div>
-<router-outlet></router-outlet>
+<!--<div>-->
+  <!--<div class="image-header-container">-->
+    <!--<div class="banner-overlay"></div>-->
+    <!--<div class="banner-caption">-->
+      <!--<h1 class="text-white">Do what you do...</h1>-->
+      <!--&lt;!&ndash; <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur voluptate a</p> &ndash;&gt;-->
+    <!--</div>-->
+  <!--</div>-->
+<!--</div>-->
+<!--<div class="content-item-wrapper">-->
+  <!--<div class="content-item" *ngFor="let image of careerImages">-->
+    <!--<img class="img-category" src={{image.url}}>-->
+    <!--<div class="category-content">-->
+      <!--<span class="category-title">{{image.title}}</span>-->
+    <!--</div>-->
+  <!--</div>-->
+<!--</div>-->
+<!--<router-outlet></router-outlet>-->
+<div class="d-flex justify-content-center align-items-center" style="height:100vh;font-size:50px;">Coming Soon...</div>
