--- a/src/app/pages/community/containers/community-container.component.html
+++ b/src/app/pages/community/containers/community-container.component.html
@@ -1,6 +1,7 @@
-<div>
-  <div class="image-header-container"></div>
-</div>
-<div class="content-wrapper">
-  <router-outlet></router-outlet>
-</div>
+<!--<div>-->
+  <!--<div class="image-header-container"></div>-->
+<!--</div>-->
+<!--<div class="content-wrapper">-->
+  <!--<router-outlet></router-outlet>-->
+<!--</div>-->
+<div class="d-flex justify-content-center align-items-center" style="height:100vh;font-size:50px;">Coming Soon...</div>
