--- a/src/app/pages/dso-practice/containers/dso-practice/dso-practice.component.html
+++ b/src/app/pages/dso-practice/containers/dso-practice/dso-practice.component.html
@@ -1,32 +1,35 @@
-<div class="dso-practice">
-<dsod-shared-carousal [images]="bannerImages" [caption]="caption"></dsod-shared-carousal>
-  <div class="practice-content">
-    <div class="container">
-      <h2 *ngIf="!categoryId" class="content-title">DSO Practice</h2>
-      <h2 *ngIf="categoryId" class="content-title">{{title}}</h2>
-      <div class="tabs-wrapper">
-        <tabset>
-          <tab heading="All" (select)="filterType('All')">
-            <dsod-practice-page-tab *ngIf="selectedTab=='All'" [contentTypeId]="contentTypeId" [categoryId]="categoryId"></dsod-practice-page-tab>
-          </tab>
-          <tab heading="Article" (select)="filterType('Articles')">
-            <dsod-practice-page-tab *ngIf="selectedTab=='Articles'" [contentTypeId]="contentTypeId" [categoryId]="categoryId"></dsod-practice-page-tab>
-          </tab>
-          <tab heading="Video" (select)="filterType('Videos')">
-            <dsod-practice-page-tab *ngIf="selectedTab=='Videos'" [contentTypeId]="contentTypeId" [categoryId]="categoryId"></dsod-practice-page-tab>
-          </tab>
-          <tab heading="Podcast" (select)="filterType('Podcasts')">
-            <dsod-practice-page-tab *ngIf="selectedTab=='Podcasts'" [contentTypeId]="contentTypeId" [categoryId]="categoryId"></dsod-practice-page-tab>
-          </tab>
-          <tab heading="Visual Essays" (select)="filterType('Visual Essay')">
-            <dsod-practice-page-tab *ngIf="selectedTab=='Visual Essay'" [contentTypeId]="contentTypeId" [categoryId]="categoryId"></dsod-practice-page-tab>
-          </tab>
-        </tabset>
-        <h2 class="no-post" *ngIf="!isLoading && (sponsoredTopics$ | async)?.length<1 && (DSOPracicesPost$ | async)?.length<1">0
-          Posts
-          Found</h2>
-      </div>
-    </div>
-  </div>
-</div>
-<ngx-spinner bdColor="rgba(51, 51, 51, 0.8)" size="medium" color="#fff" type="ball-scale-multiple"></ngx-spinner>
+<!--<div class="dso-practice">-->
+<!--<dsod-shared-carousal [images]="bannerImages" [caption]="caption"></dsod-shared-carousal>-->
+  <!--<div class="practice-content">-->
+    <!--<div class="container">-->
+      <!--<h2 *ngIf="!categoryId" class="content-title">DSO Practice</h2>-->
+      <!--<h2 *ngIf="categoryId" class="content-title">{{title}}</h2>-->
+      <!--<div class="tabs-wrapper">-->
+        <!--<tabset>-->
+          <!--<tab heading="All" (select)="filterType('All')">-->
+            <!--<dsod-practice-page-tab *ngIf="selectedTab=='All'" [contentTypeId]="contentTypeId" [categoryId]="categoryId"></dsod-practice-page-tab>-->
+          <!--</tab>-->
+          <!--<tab heading="Article" (select)="filterType('Articles')">-->
+            <!--<dsod-practice-page-tab *ngIf="selectedTab=='Articles'" [contentTypeId]="contentTypeId" [categoryId]="categoryId"></dsod-practice-page-tab>-->
+          <!--</tab>-->
+          <!--<tab heading="Video" (select)="filterType('Videos')">-->
+            <!--<dsod-practice-page-tab *ngIf="selectedTab=='Videos'" [contentTypeId]="contentTypeId" [categoryId]="categoryId"></dsod-practice-page-tab>-->
+          <!--</tab>-->
+          <!--<tab heading="Podcast" (select)="filterType('Podcasts')">-->
+            <!--<dsod-practice-page-tab *ngIf="selectedTab=='Podcasts'" [contentTypeId]="contentTypeId" [categoryId]="categoryId"></dsod-practice-page-tab>-->
+          <!--</tab>-->
+          <!--<tab heading="Visual Essays" (select)="filterType('Visual Essay')">-->
+            <!--<dsod-practice-page-tab *ngIf="selectedTab=='Visual Essay'" [contentTypeId]="contentTypeId" [categoryId]="categoryId"></dsod-practice-page-tab>-->
+          <!--</tab>-->
+        <!--</tabset>-->
+        <!--<h2 class="no-post" *ngIf="!isLoading && (sponsoredTopics$ | async)?.length<1 && (DSOPracicesPost$ | async)?.length<1">0-->
+          <!--Posts-->
+          <!--Found</h2>-->
+      <!--</div>-->
+    <!--</div>-->
+  <!--</div>-->
+<!--</div>-->
+<!--<ngx-spinner bdColor="rgba(51, 51, 51, 0.8)" size="medium" color="#fff" type="ball-scale-multiple"></ngx-spinner>-->
+
+
+<div class="d-flex justify-content-center align-items-center" style="height:100vh;font-size:50px;">Coming Soon...</div>
