--- a/src/app/pages/education/components/education-catalogue/education-catalogue.component.html
+++ b/src/app/pages/education/components/education-catalogue/education-catalogue.component.html
@@ -1,17 +1,19 @@
-<tabset class="dsod-tab-set">
-  <tab heading="ALL COURSES" customClass="dsod-tab">
-    <p class="tab-title">Catalog</p>
-    <div class="content-item-wrapper">
-      <div class="content-item" *ngFor="let category of categoryList" (click)="onClickCategory(category.name)">
-        <img class="img-category" [src]="category.image" />
-        <div class="category-content">
-          <p class="category-title">{{category.title}}</p>
-          <p class="category-count">{{category.count}} items</p>
-        </div>
-      </div>
-    </div>
-  </tab>
-  <tab heading="MY COURSES" customClass="dsod-tab">
-    <p class="tab-title">Coming Soon...</p>
-  </tab>
-</tabset>
+<!--<tabset class="dsod-tab-set">-->
+  <!--<tab heading="ALL COURSES" customClass="dsod-tab">-->
+    <!--<p class="tab-title">Catalog</p>-->
+    <!--<div class="content-item-wrapper">-->
+      <!--<div class="content-item" *ngFor="let category of categoryList" (click)="onClickCategory(category.name)">-->
+        <!--<img class="img-category" [src]="category.image" />-->
+        <!--<div class="category-content">-->
+          <!--<p class="category-title">{{category.title}}</p>-->
+          <!--<p class="category-count">{{category.count}} items</p>-->
+        <!--</div>-->
+      <!--</div>-->
+    <!--</div>-->
+  <!--</tab>-->
+  <!--<tab heading="MY COURSES" customClass="dsod-tab">-->
+    <!--<p class="tab-title">Coming Soon...</p>-->
+  <!--</tab>-->
+<!--</tabset>-->
+
+<div class="d-flex justify-content-center align-items-center" style="height:100vh;font-size:50px;">Coming Soon...</div>
