--- a/src/app/pages/events/containers/events-page.component.html
+++ b/src/app/pages/events/containers/events-page.component.html
@@ -1,45 +1,49 @@
-<dsod-carousal-lg [carousalItems]="contents"></dsod-carousal-lg>
-<div class="container">
-  <div class="row">
-    <div class="col-lg-3">
-      <section class="filter-events">
-        <div class="row">
-          <div class="col-lg-12">
-            <div class="row">
-              <div class="col-lg-12 col-md-4">
-                <dosd-filter-select label="Filter events by"></dosd-filter-select>
-                <div><label><i class="fa fa-plus mr-2"></i>Create Event</label></div>
-              </div>
-              <div class="col-lg-12 col-md-4">
-                <div class="d-flex justify-content-center datepicker-wrap mb-lg-0 mb-md-3">
-                  <ngb-datepicker #dp [(ngModel)]="eventDate" (ngModelChange)="onSelectDate($event)"></ngb-datepicker>
-                </div>
-              </div>
-            </div>
+<!--<dsod-carousal-lg [carousalItems]="contents"></dsod-carousal-lg>-->
+<!--<div class="container">-->
+  <!--<div class="row">-->
+    <!--<div class="col-lg-3">-->
+      <!--<section class="filter-events">-->
+        <!--<div class="row">-->
+          <!--<div class="col-lg-12">-->
+            <!--<div class="row">-->
+              <!--<div class="col-lg-12 col-md-4">-->
+                <!--<dosd-filter-select label="Filter events by"></dosd-filter-select>-->
+                <!--<div><label><i class="fa fa-plus mr-2"></i>Create Event</label></div>-->
+              <!--</div>-->
+              <!--<div class="col-lg-12 col-md-4">-->
+                <!--<div class="d-flex justify-content-center datepicker-wrap mb-lg-0 mb-md-3">-->
+                  <!--<ngb-datepicker #dp [(ngModel)]="eventDate" (ngModelChange)="onSelectDate($event)"></ngb-datepicker>-->
+                <!--</div>-->
+              <!--</div>-->
+            <!--</div>-->
 
-          </div>
-          <div class="col-lg-12">
-            <dsod-event-training></dsod-event-training>
-          </div>
-        </div>
+          <!--</div>-->
+          <!--<div class="col-lg-12">-->
+            <!--<dsod-event-training></dsod-event-training>-->
+          <!--</div>-->
+        <!--</div>-->
 
-      </section>
-    </div>
-    <div class="col-lg-9">
-      <h2 class="section-title mt-5 d-flex justify-content-between">{{(isEditingEnable?'Edit Event':'Events')}}
-        <div class="d-flex" *ngIf="(isLoggedIn$ | async)">
-          <button *ngIf="!isEditingEnable" class="btn btn-primary btn-blue event-action-btn mr-2" (click)="onEditEvent($event)">Edit</button>
-          <button *ngIf="!isEditingEnable" class="btn event-action-btn btn-danger mr-2" (click)="onDeleteEvent($event)">Delete</button>
-          <button *ngIf="isEditingEnable" class="btn btn-primary btn-blue event-action-btn" (click)="onSaveEvents($event)">Save</button>
-        </div>
-      </h2>
+      <!--</section>-->
+    <!--</div>-->
+    <!--<div class="col-lg-9">-->
+      <!--<h2 class="section-title mt-5 d-flex justify-content-between">{{(isEditingEnable?'Edit Event':'Events')}}-->
+        <!--<div class="d-flex" *ngIf="(isLoggedIn$ | async)">-->
+          <!--<button *ngIf="!isEditingEnable" class="btn btn-primary btn-blue event-action-btn mr-2" (click)="onEditEvent($event)">Edit</button>-->
+          <!--<button *ngIf="!isEditingEnable" class="btn event-action-btn btn-danger mr-2" (click)="onDeleteEvent($event)">Delete</button>-->
+          <!--<button *ngIf="isEditingEnable" class="btn btn-primary btn-blue event-action-btn" (click)="onSaveEvents($event)">Save</button>-->
+        <!--</div>-->
+      <!--</h2>-->
 
-      <div class="row">
-        <div class="col-xl-4 col-lg-6 col-md-6 pb-md-3" *ngFor="let event of events" (click)="navigateTo(event)">
-          <dsod-event-card [isEditable]="isEditingEnable" [event]="event" [isdeleteable]="isdeletionEnable"
-            (deleteEvent)="deleteEvent($event)"></dsod-event-card>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
+      <!--<div class="row">-->
+        <!--<div class="col-xl-4 col-lg-6 col-md-6 pb-md-3" *ngFor="let event of events" (click)="navigateTo(event)">-->
+          <!--<dsod-event-card [isEditable]="isEditingEnable" [event]="event" [isdeleteable]="isdeletionEnable"-->
+            <!--(deleteEvent)="deleteEvent($event)"></dsod-event-card>-->
+        <!--</div>-->
+      <!--</div>-->
+    <!--</div>-->
+  <!--</div>-->
+<!--</div>-->
+
+
+
+<div class="d-flex justify-content-center align-items-center" style="height:100vh;font-size:50px;">Coming Soon...</div>
