--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="banner-container">
   <dsod-carousel [loggedIn]="isLoggedIn$ | async"></dsod-carousel>
 </div> 
-<a [routerLink]="['/sponsors/GSK']">
+<!-- <a [routerLink]="['/sponsors/GSK']">
   <dsod-home-ad-banner></dsod-home-ad-banner>
 </a>
 <dsod-featured-topics [featuredTopics]="featuredTopics$ | async"></dsod-featured-topics>
@@ -27,4 +27,4 @@
       </div>
     </div>
   </div>
-</section>
+</section> -->
