--- a/src/app/pages/auth/login/login.component.html
+++ b/src/app/pages/auth/login/login.component.html
@@ -14,7 +14,7 @@
         <p class="text-or">or</p>
         <div class="form-group input-group login-control" [ngClass]="{'invalid-control': username.invalid && (username.dirty || username.touched)}">
           <div class="input-group-prepend">
-            <i class="input-group-text fa fa-envelope"></i>
+            <i class="input-group-text fa fa-envelope-o fa-lg"></i>
           </div>
           <input type="text" class="form-control" placeholder="Email address" formControlName="username">
           <div class="invalid-msg-container" *ngIf="username.invalid && (username.dirty || username.touched)">
@@ -24,12 +24,12 @@
         </div>
         <div class="input-group login-control" [ngClass]="{'invalid-control': password.invalid && (password.dirty || password.touched)}">
           <div class="input-group-prepend">
-            <i class="input-group-text fa fa-lock"></i>
+            <i class="input-group-text fa fa-lock fa-2x"></i>
           </div>
           <input [type]="isShowPassword ? 'text' : 'password'" class="form-control" placeholder="Password"
             formControlName="password">
           <div class="password-visible-wrapper">
-            <a (click)="isShowPassword = !isShowPassword" class="action">{{isShowPassword ? 'Hide' : 'Show'}}</a>
+            <a (click)="isShowPassword = !isShowPassword" class="action">{{isShowPassword ? 'HIDE' : 'SHOW'}}</a>
           </div>
           <div class="invalid-msg-container" *ngIf="password.invalid && (password.dirty || password.touched)">
             <span class="invalid-input" *ngIf="password.errors.required">The password can't be blank.</span>
