--- a/src/app/pages/home/components/slider/slider-item.component.scss
+++ b/src/app/pages/home/components/slider/slider-item.component.scss
@@ -21,12 +21,12 @@
 
       h1 {
         font-size: 80px;
-        color: $color-white;
+        color: black;
         font-weight: 300;
       }
 
       h2 {
-        color: $color-white;
+        color: black;
         font-size: 30px;
         font-weight: 500;
         margin-bottom: 10px;
@@ -34,7 +34,7 @@
 
       p {
         font-size: 26px;
-        color: $color-white;
+        color: black;
         max-width: 600px;
         margin: 0 auto 25px;
         line-height: 35px;
